--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,17 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    name: Build & test (Host)
+  build_linux:
+    name: Build ${{ matrix.target }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        target:
+          - aarch64-unknown-linux-gnu
+          - armv7-unknown-linux-gnueabi
+          - i686-unknown-linux-gnu
+          - x86_64-unknown-linux-gnu
     steps:
     - name: Cancel previous runs
       uses: styfle/cancel-workflow-action@0.12.1
@@ -26,8 +34,16 @@ jobs:
       run: |
        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s  -- -y && \
        rustup install nightly && \
-       rustup default nightly
+       rustup default nightly && \
+       rustup target add ${{ matrix.target }}
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --target ${{ matrix.target }}
     - name: Run tests
-      run: cargo test --verbose
+      if: ${{ matrix.target == 'x86_64-unknown-linux-gnu' }}
+      run: cargo test
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.target }}
+        path: |
+          target/${{ matrix.target }}/liblevel_hash.so
