--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,9 @@ jobs:
        rustup target add ${{ matrix.target }}
     - name: Install packages
       run: |
-        sudo apt-get install gcc-aarch64-linux-gnu && \
-        sudo apt-get install gcc-arm-linux-gnu && \
-        sudo apt-get install gcc-i686-linux-gnu
+        sudo apt-get install -y gcc-aarch64-linux-gnu && \
+        sudo apt-get install -y gcc-arm-linux-gnueabi && \
+        sudo apt-get install -y gcc-i686-linux-gnu
     - name: Build
       run: cargo build --target ${{ matrix.target }}
     - name: Run tests
