--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
           - armv7-unknown-linux-gnueabi
           - i686-unknown-linux-gnu
           - x86_64-unknown-linux-gnu
+    env:
+      CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-ld
+      CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABI_LINKER: arm-linux-gnueabi-ld
+      CARGO_TARGET_I686_UNKNOWN_LINUX_GNU_LINKER: i686-linux-gnu-ld
     steps:
     - name: Cancel previous runs
       uses: styfle/cancel-workflow-action@0.12.1
@@ -39,7 +43,7 @@ jobs:
     - name: Install packages
       run: |
         sudo apt-get install -y gcc-aarch64-linux-gnu && \
-        sudo apt-get install -y gcc-arm-linux-gnueabi && \
+        sudo apt-get install -y gcc-arm-linux-gnueabi  && \
         sudo apt-get install -y gcc-i686-linux-gnu
     - name: Build
       run: cargo build --target ${{ matrix.target }}
