--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         wget https://dl.google.com/android/repository/android-ndk-${NDK_VERSION}-linux.zip -O /tmp/android-ndk.zip
         unzip -d ~/ /tmp/android-ndk.zip
         echo "ANDROID_NDK_HOME=~/android-ndk-${NDK_VERSION}" >> $GITHUB_ENV
-        echo "NDK=${"ANDROID_NDK_HOME}" >> $GITHUB_ENV
+        echo "NDK=${ANDROID_NDK_HOME}" >> $GITHUB_ENV
         echo "PATH=${NDK}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
         echo "CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER=$(which aarch64-linux-android${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
         echo "CARGO_TARGET_ARMV7_LINUX_ANDROIDEABI_LINKER=$(which armv7a-linux-androideabi${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
