--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,8 @@ jobs:
           gcc-i686-linux-gnu
     - name: Setup Android NDK
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-${NDK_VERSION}-linux.zip -O /tmp/android-ndk.zip
-        unzip -d ~/ /tmp/android-ndk.zip
+        wget -q https://dl.google.com/android/repository/android-ndk-${NDK_VERSION}-linux.zip -O /tmp/android-ndk.zip
+        unzip -q -d ~/ /tmp/android-ndk.zip
         echo "ANDROID_NDK_HOME=~/android-ndk-${NDK_VERSION}" >> $GITHUB_ENV
         echo "NDK=${ANDROID_NDK_HOME}" >> $GITHUB_ENV
         echo "PATH=${NDK}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
