--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,16 +54,17 @@ jobs:
       run: |
         wget -q https://dl.google.com/android/repository/android-ndk-${NDK_VERSION}-linux.zip -O /tmp/android-ndk.zip
         unzip -q -d ~/ /tmp/android-ndk.zip
-        echo "ANDROID_NDK_HOME=~/android-ndk-${NDK_VERSION}" >> $GITHUB_ENV
-        echo "NDK=${ANDROID_NDK_HOME}" >> $GITHUB_ENV
-        echo "PATH=${NDK}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
+        export ANDROID_NDK_HOME=~/android-ndk-${NDK_VERSION}
+        export NDK=${ANDROID_NDK_HOME}
+        export PATH=$PATH:${NDK}/toolchains/llvm/prebuilt/linux-x86_64/bin
+        echo "ANDROID_NDK_HOME=${ANDROID_NDK_HOME}" >> $GITHUB_ENV
+        echo "NDK=${NDK}" >> $GITHUB_ENV
         echo "CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER=$(which aarch64-linux-android${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
         echo "CARGO_TARGET_ARMV7_LINUX_ANDROIDEABI_LINKER=$(which armv7a-linux-androideabi${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
         echo "CARGO_TARGET_I686_LINUX_ANDROID_LINKER=$(which i686-linux-android${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
         echo "CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER=$(which x86_64-linux-android${ANDROID_PLATFORM}-clang)" >> $GITHUB_ENV
     - name: Build
       run: |
-        . "$HOME/.cargo/env"
         cargo build --target ${{ matrix.target }}
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
