--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,8 @@ jobs:
           cmake \
           gcc-aarch64-linux-gnu \
           gcc-arm-linux-gnueabi \
-          gcc-i686-linux-gnu
+          gcc-i686-linux-gnu \
+          gcc-multilib
     - name: Setup Android NDK
       run: |
         wget -q https://dl.google.com/android/repository/android-ndk-${NDK_VERSION}-linux.zip -O /tmp/android-ndk.zip
@@ -71,7 +72,7 @@ jobs:
       with:
         name: ${{ matrix.target }}
         path: |
-          target/${{ matrix.target }}/liblevel_hash.so
+          target/${{ matrix.target }}/debug/liblevel_hash.so
 
   build_linux:
     name: Build for Linux
