chore(workflow): update artifact names to include android platform version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.target }}
+        name: ${{ matrix.target }}-${{ matrix.platform }}
         path: |
           target/${{ matrix.target }}/debug/liblevel_hash.so
 
