--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ byteorder = "1.5.0"
 libc = "0.2.155"
 memmap2 = "0.9.4"
 rand = "0.8.5"
+paste = "1.0.15"
 
 [dev-dependencies]
 float-cmp = "0.9.0"
