--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,6 +100,8 @@ jobs:
           gcc-i686-linux-gnu
     - name: Build
       run: cargo build
+    - name: Check
+      run: cargo check
     - name: Run tests
       run: cargo test
     - name: Upload artifacts
