--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,14 @@ libc = "0.2.155"
 memmap2 = "0.9.4"
 rand = "0.8.5"
 paste = "1.0.15"
+parking_lot = "0.12.3"
 
 [dev-dependencies]
 float-cmp = "0.9.0"
 gxhash = "3.4.1"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+tokio = { version = "1.39.3", features = ["full"] }
+async-channel = "2.3.1"
 
 [build-dependencies]
 bindgen = "0.65.1"
@@ -32,9 +35,14 @@ crate-type = ["rlib", "dylib"]
 [profile.release]
 strip = true
 
-[[bench]]   
+[profile.release-with-debug]
+inherits = "release"
+debug = true
+
+[[bench]]
 name = "level_benchmarks"
 harness = false
 
 [[example]]
 name = "insert_1000000"
+
